[gd_scene load_steps=11 format=3 uid="uid://qwrindvc2hui"]

[ext_resource type="Script" uid="uid://bx3fjs12twgdd" path="res://script/main_menu.gd" id="1_6tihl"]
[ext_resource type="FontFile" uid="uid://b4plg7kkpearp" path="res://fonts/Modak/Modak-Regular.ttf" id="1_blpvt"]
[ext_resource type="Texture2D" uid="uid://jupf0x072u3q" path="res://logo/logo.jpeg" id="1_gnign"]
[ext_resource type="Script" uid="uid://0wehf1miyygk" path="res://script/logo_sprite.gd" id="1_q62vu"]
[ext_resource type="Texture2D" uid="uid://dhjftuikip0bg" path="res://logo/choose_carac.svg" id="5_37yx3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6tihl"]
load_path = "res://.godot/imported/WhatsApp Image 2025-04-07 at 12.14.32.jpeg-0e20017844e61120519d1fc357edcf72.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gnign"]
load_path = "res://.godot/imported/WhatsApp Image 2025-04-08 at 12.28.07.jpeg-af346b8498150975ab50b8a49841c559.ctex"

[sub_resource type="Animation" id="Animation_37yx3"]
length = 3.0
step = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q62vu"]
resource_name = "new_animation"
length = 3.0
step = 0.030303
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6ys8"]
_data = {
&"RESET": SubResource("Animation_37yx3"),
&"new_animation": SubResource("Animation_q62vu")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q62vu")

[node name="LogoSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
visibility_layer = 1023
position = Vector2(572, 327.25)
scale = Vector2(1.11719, 0.63623)
texture = ExtResource("1_gnign")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="StartMenu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6tihl")

[node name="TextureRect" type="TextureRect" parent="UILayer/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.569
anchor_bottom = 16.242
offset_right = -1102.76
offset_bottom = -589.68
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(28.5692, 10.8279)
texture = SubResource("CompressedTexture2D_6tihl")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.0
anchor_top = 3.475
anchor_right = 19.65
anchor_bottom = 12.35
offset_left = 75.0
offset_top = 4.0
offset_right = 74.9999
offset_bottom = 4.0

[node name="Start" type="Button" parent="UILayer/StartMenu/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("1_blpvt")
theme_override_font_sizes/font_size = 51
text = "START"
autowrap_mode = 2

[node name="hard_mode" type="Button" parent="UILayer/StartMenu/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("1_blpvt")
theme_override_font_sizes/font_size = 43
text = "HARD MODE"
autowrap_mode = 2

[node name="Option" type="Button" parent="UILayer/StartMenu/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("1_blpvt")
theme_override_font_sizes/font_size = 45
text = "OPTIONS"

[node name="Exit" type="Button" parent="UILayer/StartMenu/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("1_blpvt")
theme_override_font_sizes/font_size = 50
text = "EXIT GAME"

[node name="logo" type="TextureRect" parent="UILayer/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 23.375
anchor_top = -0.175
anchor_right = 26.719
anchor_bottom = 2.898
offset_left = 74.9999
offset_top = 8.0
offset_right = 965.24
offset_bottom = 909.08
scale = Vector2(0.130641, 0.120035)
texture = SubResource("CompressedTexture2D_gnign")

[node name="Label" type="Label" parent="UILayer/StartMenu"]
layout_mode = 0
offset_left = 720.0
offset_top = 240.0
offset_right = 835.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("1_blpvt")
theme_override_font_sizes/font_size = 35

[node name="choose_carac" type="Button" parent="UILayer/StartMenu"]
layout_mode = 0
offset_left = 27.0
offset_top = 27.0
offset_right = 83.0
offset_bottom = 83.0
theme_type_variation = &"FlatButton"
icon = ExtResource("5_37yx3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g6ys8")
}

[connection signal="pressed" from="UILayer/StartMenu/VBoxContainer/Start" to="UILayer/StartMenu" method="_on_start_pressed"]
[connection signal="pressed" from="UILayer/StartMenu/VBoxContainer/hard_mode" to="UILayer/StartMenu" method="_on_hard_mode_pressed"]
[connection signal="pressed" from="UILayer/StartMenu/VBoxContainer/Option" to="UILayer/StartMenu" method="_on_option_pressed"]
[connection signal="pressed" from="UILayer/StartMenu/VBoxContainer/Exit" to="UILayer/StartMenu" method="_on_exit_pressed"]
[connection signal="pressed" from="UILayer/StartMenu/choose_carac" to="UILayer/StartMenu" method="_on_choose_carac_pressed"]
